--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,22 @@
     android:layout_height="match_parent"
     tools:context="com.botpy.constrainlayoutexample.MainActivity">
 
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"></WebView>
     <Button
         android:text="登录"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button"
-        android:allowUndo="false"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="56dp"
         app:layout_constraintRight_toLeftOf="@+id/guideline"
@@ -28,24 +38,11 @@
         android:layout_marginBottom="56dp"
         app:layout_constraintLeft_toLeftOf="@+id/guideline" />
 
+
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="511dp"
         android:id="@+id/guideline"
         android:orientation="vertical"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="192dp"
         app:layout_constraintGuide_percent="0.5" />
-
-    <WebView
-        android:id="@+id/webView"
-        android:layout_width="0dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"></WebView>
 </android.support.constraint.ConstraintLayout>
