--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,16 @@
     android:layout_height="match_parent"
     tools:context="com.botpy.constrainlayoutexample.MainActivity">
 
-    <WebView
-        android:id="@+id/webView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"></WebView>
+        android:src="@drawable/ic_launcher"/>
+
     <Button
         android:text="登录"
         android:layout_width="wrap_content"
@@ -25,6 +24,8 @@
         android:id="@+id/button"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="56dp"
+        android:textColor="@color/white"
+        android:background="@color/colorAccent"
         app:layout_constraintRight_toLeftOf="@+id/guideline"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp" />
@@ -34,6 +35,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button2"
+        android:textColor="@color/white"
+        android:background="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="56dp"
         app:layout_constraintLeft_toLeftOf="@+id/guideline" />
