--- a/app/src/main/res/layout/activity_color_track.xml
+++ b/app/src/main/res/layout/activity_color_track.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:padding="20dp"
+        android:background="@color/colorPrimary"
         android:text="变色了吗佛尔化工而回顾共恶化"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="30dp"
