--- a/app/src/main/res/layout/activity_color_track.xml
+++ b/app/src/main/res/layout/activity_color_track.xml
@@ -6,17 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".ColorTrackActivity">
 
-    <com.botpy.constrainlayoutexample.view.ColorTrackTextView
-        android:id="@+id/text_track"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linear_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:orientation="horizontal"
         android:padding="20dp"
-        android:background="@color/colorPrimary"
-        android:text="变色了吗佛尔化工而回顾共恶化"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
-        app:normal_color="@color/gray"
-        app:changer_color="@color/colorAccent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/linear_title"
+        ></android.support.v4.view.ViewPager>
 </android.support.constraint.ConstraintLayout>
