--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="info_item_image_style_new">
+        <item name="android:layout_width">@dimen/h_dp_42</item>
+        <item name="android:layout_height">@dimen/h_dp_42</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:padding">@dimen/w_dp_15</item>
+        <item name="android:src">@drawable/down_arrow</item>
+    </style>
 </resources>
