--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,19 @@
         android:layout_marginBottom="56dp"
         app:layout_constraintLeft_toLeftOf="@+id/guideline" />
 
+    <Button
+        android:text="Kotlin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button4"
+        android:textColor="@color/white"
+        android:background="@color/colorAccent"
+        app:layout_constraintBottom_toTopOf="@id/button"
+        android:layout_marginBottom="56dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/guideline" />
+
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="511dp"
